--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,5 +16,7 @@ const currentYear = new Date().getFullYear()
         Powered by
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://astro.build">Astro</a> &
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/saicaca/fuwari">Fuwari</a>
+        </br>
+        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://beian.miit.gov.cn/">滇ICP备2025067677号</a>
     </div>
 </div>
